# BoostTCPServer

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  VariableService.cpp  VariableService.h  build.sh  docker-compose.yml  kafkamessage.cpp  main.cpp  tcpServer.kdev4  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  testscript.sh
.devcontainer/: devcontainer.json
